# paid_queue

./: .gitignore  README.md
config/: redis.conf
design/: 2021-03-27-设想.md  2021-03-28-微服务器接口功能.md  2021-03-28-数据结构.md  readme.md
microservice_rust_actix/: .gitignore  Cargo.toml  Dockerfile  docker.config
microservice_rust_actix/src/: lib.rs  main.rs
microservice_rust_actix/src/const_lib/: redis_key.rs
microservice_rust_actix/src/databases/: redis_pool.rs
microservice_rust_actix/src/lib/: mod.rs
microservice_rust_actix/src/model/: mod.rs
microservice_rust_actix/src/tools/: str.rs
scripts/: build_microservice_rust_actix.sh  init_microservice_rust_actix.sh  init_redis.sh
