[package]
name = "microservice_rust_actix"
version = "0.1.0"
authors = ["yangdianqing <phpgoc@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
env_logger = "0.8"
r2d2_redis = "0.14.0"
clap = "2.33.3"

[[bin]]
name = "hello"
path = "for_docker_build_bin/hello.rs"

[[bin]]
name = "pq"
path = "src/bin/paid_queue.rs"
